
Changelog
=========

4.0.6 (unreleased)
------------------

- Reworked OrgUnit Selector:
    - Store current unit to regular cookie instead of using the session_data_manager.
    - Differentiate between users_units (selectable) and admin_unit's org_unit
      (current org_unit).
    - Change current org_unit functionality, the current orgunit has to be
      part of the current admin_unit.

  [phgross]

- Made schemamigrations to 4.0.x release oracle compatible.
  [phgross]

- Fixed transporting task with the OGDS Transporter beetwen different admin_units.
  [phgross]


4.0.5 (2014-11-25)
------------------

- Extract attachments view: Fixed contenttype helper when lookup via filename.
  [phgross]


4.0.4 (2014-11-13)
------------------

- Extract attachments view: fixed icon display in attachment listing.
  [phgross]

- Disable paste action for mails.
  [phgross]

- Set proper Content-Type header in responses from LDAP control panel views.
  [lgraf]

- Fix Unicode handling in OGDSUpdater.
  [lgraf]


4.0.3 (2014-11-10)
------------------

- Dossier responsible field: use current admin unit's user, instead of only
  current orgunit's one.
  [phgross]

- Forwarding Transitioncontroller: Fixed assign_to_dossier check.
  [phgross]

- Fixed mail download for mails with already CRLF.
  [phgross]

- Add new type Inbox Container.
  [phgross]

- Task byline: Use adminUnit abbreviation instead of label for sequence_number display.
  [phgross]


4.0.2 (2014-11-03)
------------------

- Fixed version download, when download confirmation is deactivated.
  [phgross]

- Mail Download: Convert LF to CRLF, to avoid displaing problems in MS Outlook.
  [phgross]

- Fixed UnicodeEncodeError in task link generation.
  [phgross]


4.0.1 (2014-10-27)
------------------

- Harmonize column lengths of groupid and userid columns.
  [phgross]


4.0.0 (2014-10-26)
------------------

- Changes to OGDS [phgross, deiferni]:
